@@ -116,4 +116,4 @@
 
 - surround_primes
 
-- More Montgomery: znlog, sqrtmod, catalan
+- More Montgomery: znlog, catalan
